[Project Setup - Driver manager] Remove URL as Deprecated and make with URI